--- a/.env_dev.toml
+++ b/.env_dev.toml
@@ -1,6 +1,6 @@
 [database]
-username="username"
-password="password"
-host="host"
-port="port"
-database="database"
+username="dev_user"
+password="changeme"
+host="localhost"
+port="5432"
+dbname="my_database"
